--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "twoshoulder",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ccwchi.github.io/twoshoulder/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "flowbite-react": "^0.9.0",
     "framer-motion": "^11.2.10",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
@@ -20,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",    
+    "deploy": "gh-pages -d build"    
   },
   "eslintConfig": {
     "extends": [
